--- a/src/main/webapp/css/workflow.css
+++ b/src/main/webapp/css/workflow.css
@@ -65,6 +65,7 @@ div .return-top .return-top-content {
 /*end 返回顶部按钮*/
 
 
+/*begin 表单*/
 table tr th
 {	
 	width:15%;
@@ -76,3 +77,4 @@ table tr td
 	width:30%;
 	
 }
+/*end 表单*/
