--- a/src/main/webapp/modules/workflow/css/list_base.css
+++ b/src/main/webapp/modules/workflow/css/list_base.css
@@ -7,3 +7,9 @@
 .list-pager ul { float: right; list-style-type: none; }
 .list-pager ul li { float: left; margin: 5px 7px; }
 .list-pager ul li a { padding: 3px; height: 34px; line-height: 34px; }
+
+
+/********************************************************
+		列表样式
+*********************************************************/
+.list-container table{margin-bottom:0px;}
