--- a/src/main/webapp/modules/workflow/css/list_base.css
+++ b/src/main/webapp/modules/workflow/css/list_base.css
@@ -1,21 +1,74 @@
-/********************************************************
-                        ∑÷“≥øÿº˛—˘ Ω
+Ôªø/********************************************************
+                        ÂàÜÈ°µÊéß‰ª∂Ê†∑Âºè
 *********************************************************/
-.list-pager { height: 40px; line-height: 40px; clear: both; border-top: solid 1px #e2e2e2; padding: 0 5px; }
-.list-pager .stat { float: left; color: #59636a; }
-.list-pager .page { color: #2e8dbf; margin: 0 2px; }
-.list-pager ul { float: right; list-style-type: none; }
-.list-pager ul li { float: left; margin: 5px 7px; }
-.list-pager ul li a { padding: 3px; height: 34px; line-height: 34px; }
+
+.list-pager {
+    height: 40px;
+    line-height: 40px;
+    clear: both;
+    border-top: solid 1px #e2e2e2;
+    padding: 0 5px;
+}
+
+.list-pager .stat {
+    float: left;
+    color: #59636a;
+}
+
+.list-pager .page {
+    color: #2e8dbf;
+    margin: 0 2px;
+}
+
+.list-pager ul {
+    float: right;
+    list-style-type: none;
+}
+
+.list-pager ul li {
+    float: left;
+    margin: 5px 7px;
+}
+
+.list-pager ul li a {
+    padding: 3px;
+    height: 34px;
+    line-height: 34px;
+}
 
 
 /********************************************************
-		¡–±Ì—˘ Ω
+		ÂàóË°®Ê†∑Âºè
 *********************************************************/
-.page-panel .title { height: 24px; line-height: 24px; padding: 3px 7px; background-color: #f7f7f7; border-bottom: 1px solid #e7e6e6; }
 
-.search-panel { background-color: white; border: 1px solid #e2e2e2; }
-.search-panel form{margin:5px;}
+.page-panel .title {
+    height: 24px;
+    line-height: 24px;
+    padding: 3px 7px;
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #e7e6e6;
+}
 
-.grid-panel table{margin-bottom:0px;}
-.grid-panel { background-color: white; border: 1px solid #e2e2e2; }
+.search-panel {
+    background-color: white;
+    border: 1px solid #e2e2e2;
+}
+
+.search-panel form {
+    margin: 5px;
+}
+
+.grid-panel table {
+    margin-bottom: 0px;
+}
+
+.grid-panel {
+    background-color: white;
+    border: 1px solid #e2e2e2;
+}
+
+.list-pager a[data-enabled=false] {
+    text-decoration: none;
+    color: gray;
+    cursor: default;
+}
