--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="zhuang-upms.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/zhuang-upms/zhuang-upms">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="zhuang-web"/>
         <property name="java-output-path" value="/zhuang-web/target/classes"/>
     </wb-module>
