--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+        <dependent-module archiveName="zhuang-data.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/zhuang-data/zhuang-data">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="zhuang-upms.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/zhuang-upms/zhuang-upms">
             <dependency-type>uses</dependency-type>
         </dependent-module>
